--- a/app/views/header.html
+++ b/app/views/header.html
@@ -19,7 +19,7 @@
                 <div class="item" ng-click="logout()">Logout</div>
                 <div class="ui divider"></div>
                 <div class="header">Admin</div>
-                <div class="item" ui-sref="root.verifyBooks()">Verify Books</div>
+                <div class="item" ui-sref="root.verifyBooks()">Verify Books <b ng-if="unverifiedCount>0">({{unverifiedCount}})</b></div>
                 <div class="item" ui-sref="root.users()">Manage Users</div>
             </div>
         </div>
