Implemented validation on server and client app. Added restrictions for admin only actions.

--- a/app/views/books.html
+++ b/app/views/books.html
@@ -9,7 +9,7 @@
 <div class="ui cards">
     <div ng-repeat="b in books" class="card" style="width: 262px">
         <a class="image">
-            <img ng-click="openBookModal(b)" src={{b.imageUrl}}>
+            <img ng-click="openBookModal(b)" src={{b.imageUrl}} alt="No image">
         </a>
 
         <div class="content">
