--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,6 +2,7 @@
     <div class="column" style="max-width: 450px;">
         <h2 class="ui teal image header">
             <img src="../images/EELogo.png" class="image">
+
             <div ng-if="isLogin" class="content">
                 Login
             </div>
@@ -9,18 +10,25 @@
                 Register
             </div>
         </h2>
-        <form ng-show="!hasRegistered" class="ui large form">
+        <form name="loginForm" ng-show="!hasRegistered" class="ui large form">
             <div class="ui stacked segment">
-                <div class="field">
+                <div class="field" ng-class="{'error':loginForm.email.$invalid && submitted}">
                     <div class="ui left icon input">
                         <i class="user icon"></i>
-                        <input ng-model="email" type="text" name="email" placeholder="E-mail address">
+                        <input ng-model="email"
+                               ng-pattern="/.@extensionengine\.com$/i"
+                               ng-required="true"
+                               type="text" name="email" placeholder="E-mail address">
                     </div>
                 </div>
-                <div class="field">
+                <div class="field" ng-class="{'error':loginForm.password.$invalid && submitted}">
                     <div class="ui left icon input">
                         <i class="lock icon"></i>
-                        <input ng-model="password" type="password" name="password" placeholder="Password">
+                        <input ng-model="password"
+                               ng-minlength="4"
+                               ng-maxlength="30"
+                               ng-required="true"
+                               type="password" name="password" placeholder="Password">
                     </div>
                 </div>
                 <div ng-if="isLogin" ng-click="login()" class="ui fluid large teal submit button">
@@ -50,9 +58,17 @@
         <div ng-if="hasRegistered">Verification mail has been sent to your address. Please verify your
             mail and then login <a ui-sref="login()">here</a>.
         </div>
+
         <div ng-if="!hasRegistered && msg!=''" class="ui error message">
             {{msg}}
         </div>
+        <div ng-if="submitted && loginForm.email.$invalid" class="ui error message">
+            Email must be from extensionengine domain.
+        </div>
+        <div ng-if="submitted && loginForm.password.$invalid" class="ui error message">
+            Password must be from 4 to 30 characters long.
+        </div>
+
     </div>
 </div>
 
