--- a/app/views/forgot-pass.html
+++ b/app/views/forgot-pass.html
@@ -7,7 +7,7 @@
                 Generate New Password
             </div>
         </h2>
-        <form name="forgotPassForm" class="ui large form">
+        <form name="forgotPassForm" ng-show="!hasGottenNew" class="ui large form">
             <div class="ui stacked segment">
                 <div class="field" ng-class="{'error':forgotPassForm.email.$invalid && submitted}">
                     <div class="ui left icon input">
@@ -26,8 +26,8 @@
             </div>
         </form>
 
-        <div ng-if="hasGottenNew">Verification mail has been sent to your address. Please verify your
-            mail and then login <a ui-sref="login()">here</a>.
+        <div ng-if="hasGottenNew">New password has been sent to your address. Please use it
+            to login <a ui-sref="login()">here</a>.
         </div>
 
         <div ng-if="!hasGottenNew && msg!=''" class="ui error message">
