Removed logging of sucessful email and stylized description text display for a book.

--- a/app/views/modal-book.html
+++ b/app/views/modal-book.html
@@ -10,7 +10,7 @@
         </div>
         <div class="description">
             <div class="ui header">{{sourceObject.author}}</div>
-            <p>{{sourceObject.description}}</p>
+            <p style="white-space: pre-wrap;">{{sourceObject.description}}</p>
 
             <div><b>Pages: </b>{{sourceObject.pages}}</div>
             <div><b>ISBN-10: </b>{{sourceObject.isbn10}}</div>
