Fixed some images not appearing on some browsers because of trying to render before data is fetched.

--- a/app/views/edit-book.html
+++ b/app/views/edit-book.html
@@ -89,7 +89,7 @@
         </div>
         <div class="field">
             <label>Image preview:</label>
-            <img src={{book.imageUrl}} class="ui small image"
+            <img ng-src={{book.imageUrl}} class="ui small image"
                  alt="Please fill the 'Book Image URL' field with a valid URL.">
         </div>
 
