--- a/app/views/home.html
+++ b/app/views/home.html
@@ -8,7 +8,7 @@
                 <div class="ui items">
                     <div ng-repeat="b in books" class="item">
                         <a class="ui tiny image">
-                            <img ng-click="openBookModal(b)" src={{b.imageUrl}}>
+                            <img ng-click="openBookModal(b)" ng-src={{b.imageUrl}}>
                         </a>
 
                         <div class="middle aligned content">
