--- a/app/views/modal-book.html
+++ b/app/views/modal-book.html
@@ -6,7 +6,7 @@
     </div>
     <div class="image content">
         <div class="ui image">
-            <img src={{sourceObject.imageUrl}} alt=""/>
+            <img ng-src={{sourceObject.imageUrl}} alt=""/>
         </div>
         <div class="description">
             <div class="ui header">{{sourceObject.author}}</div>
