--- a/app/views/verify-books.html
+++ b/app/views/verify-books.html
@@ -8,7 +8,7 @@
 
             <div ng-repeat="b in books" class="card">
                 <div class="content">
-                    <img class="right floated mini ui image" src={{b.imageUrl}}>
+                    <img class="right floated mini ui image" ng-src={{b.imageUrl}}>
                     <div class="header">
                         {{b.title}}
                     </div>
