--- a/app/views/books.html
+++ b/app/views/books.html
@@ -11,7 +11,7 @@
 <div class="ui cards">
     <div ng-repeat="b in books" class="card" style="width: 262px">
         <a class="image">
-            <img ng-click="openBookModal(b)" src={{b.imageUrl}} alt="No image">
+            <img ng-click="openBookModal(b)" ng-src={{b.imageUrl}} alt="No image">
         </a>
 
         <div class="content">
